# image-reducer

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/image_reducer/: main.py
src/kollikissa/: image_processing.py  main.py  opencvtest.py  opencvtest2.py  test.py
tests/: test_conversion.py  test_processing.py
