[project]
name = "kollikissa"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Okko Hartikainen", email = "okko.hartikainen@yandex.com"},
]
dependencies = ["Pillow>=11.1.0", "pillow-avif-plugin>=1.4.6", "fastapi>=0.115.6", "uvicorn>=0.34.0", "python-multipart>=0.0.20"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


#[tool.pdm]
#distribution = true

[tool.pdm.scripts]
start_old = "uvicorn main:app --reload --app-dir ./src/kollikissa  --reload" 
start = "uvicorn kollikissa.main:app --host 0.0.0.0 --port 8000 --reload"  # reload: restarts the server when the code changes
