[project]
name = "kollikissa"
version = "0.1.0"
description = "Image processing service."
authors = [
    {name = "Okko Hartikainen", email = "okko.hartikainen@yandex.com"},
]
dependencies = [
    "Pillow>=11.1.0",
    "pillow-avif-plugin>=1.4.6",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "uvicorn kollikissa.main:app --host 0.0.0.0 --port 8000 --reload"
test = "pytest --verbose --capture=no"
lint = "pylint src/ tests/"
b = "sudo docker build {args} -t kollikissa ."
r = "sudo docker run --interactive --tty --rm --publish 8000:8000 kollikissa {args}"
br = {composite = ["b", "r {args}"]}

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pylint>=3.3.3",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
